feat(jwt): add jwt token in api side